--- a/yes-page.html
+++ b/yes-page.html
@@ -167,6 +167,13 @@
         }
       }
     })();
+
+    // Force full reload when returning via back/forward cache
+    window.addEventListener('pageshow', function (event) {
+      if (event.persisted) {
+        window.location.reload();
+      }
+    });
   </script>
 </body>
 </html>
