--- a/index.html
+++ b/index.html
@@ -3,177 +3,289 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Yay! 💕</title>
+  <title>Will you be my Valentine?</title>
   <style>
-    * { box-sizing: border-box; }
+    :root {
+      --brown: #B2996E;
+      --cream: #FFF8E1;
+      --beige: #F5E5C0;
+      --pink: #FFD6DE;
+      --shadow-lg: 0 8px 32px rgba(178,153,110,0.18);
+      --shadow-sm: 0 2px 12px rgba(178,153,110,0.09);
+      --border-radius: 2.5rem;
+    }
     html, body {
+      height: 100%;
       margin: 0;
       padding: 0;
-      width: 100%;
-      min-height: 100vh;
       overflow-x: hidden;
+      overflow-y: hidden;
+      background: url('bg.jpg') center center / cover no-repeat fixed;
+      font-family: 'Segoe UI', 'Arial Rounded MT Bold', 'Arial', sans-serif;
+      min-height: 100vh;
+      width: 100%;
+      box-sizing: border-box;
     }
     body {
-      background-color: #FEEAF3;
-      position: relative;
+      min-height: 100vh;
+      min-width: 100vw;
       display: flex;
       align-items: center;
       justify-content: center;
-      min-height: 100vh;
     }
-    .message-box {
-      position: relative;
-      z-index: 10;
-      background: rgba(240, 176, 200, 0.78);
-      border-radius: 2.5rem;
-      box-shadow: 0 8px 32px rgba(178, 153, 110, 0.22);
+    .valentine-container {
+      background: rgba(250, 250, 250, 0.74);
+      border-radius: var(--border-radius);
+      box-shadow: var(--shadow-lg);
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      padding: 3.5rem 3rem;
-      width: 85vw;
-      max-width: 650px;
-      margin: 2rem;
+      padding: 2.68rem 1.87rem 2.14rem 1.87rem;
+      width: 96vw;
+      max-width: 439px;
+      margin: 1.6rem;
     }
-    .message-box h1 {
-      font-size: 2.8rem;
+
+    .valentine-headline {
+      font-size: 2.57rem;
       font-weight: bold;
-      color: #8B5A6B;
+      color: var(--brown);
       text-align: center;
-      margin: 0 0 1.2rem 0;
-      font-family: 'Segoe UI', 'Arial Rounded MT Bold', 'Arial', sans-serif;
-      letter-spacing: 0.02em;
+      margin-bottom: 2.35rem;
+      letter-spacing: 0.03em;
+      text-shadow: 0 6px 20px #fff7, 0 1px 0 var(--beige);
     }
-    .message-box .love-text {
-      font-size: 1.9rem;
-      font-weight: 600;
-      color: #7A4A5A;
-      text-align: center;
-      margin: 0 0 1rem 0;
-      font-family: 'Segoe UI', 'Arial Rounded MT Bold', 'Arial', sans-serif;
+    .valentine-buttons {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      gap: 2.35rem;
+      margin-top: 0.64rem;
     }
-    .message-box .mwah-text {
-      font-size: 1.6rem;
-      font-weight: 500;
-      color: #8B5A6B;
-      text-align: center;
-      margin: 0 0 1.8rem 0;
-      font-family: 'Segoe UI', 'Arial Rounded MT Bold', 'Arial', sans-serif;
+
+    .button-wrapper {
+      flex: 1 1 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      position: relative;
+      min-width: 128px;
     }
-    .message-box .heart-img {
-      display: block;
-      max-width: 140px;
-      height: auto;
-    }
-    .message-box .heart-inline {
-      display: inline-block;
-      width: 1.1em;
-      height: 1.1em;
-      vertical-align: middle;
-    }
-    .heart-scatter {
-      position: fixed;
-      inset: 0;
-      z-index: 0;
-      pointer-events: none;
+    .button-wrapper.no-btn-wrapper {
       overflow: hidden;
     }
-    .heart-scatter img {
+
+    /* YES BUTTON & FLOATING HEARTS - surround button, show on hover */
+    .yes-hearts {
       position: absolute;
-      object-fit: contain;
-      will-change: transform;
-      animation: float-soft var(--dur, 5s) ease-in-out infinite;
-      animation-delay: var(--delay, 0s);
+      top: 50%;
+      left: 50%;
+      width: 150px;
+      height: 150px;
+      transform: translate(-50%, -50%);
+      pointer-events: none;
+      z-index: 2;
+      opacity: 0;
+      transition: opacity 0.35s ease;
     }
-    @keyframes float-soft {
-      0%, 100% { transform: translate(-50%, -50%) translateY(0) rotate(var(--rot)); }
-      50% { transform: translate(-50%, -50%) translateY(-6px) rotate(var(--rot)); }
+    .button-wrapper:hover .yes-hearts {
+      opacity: 1;
+    }
+    .yes-heart {
+      position: absolute;
+      font-size: 1.23rem;
+      animation: float-heart 2.25s infinite cubic-bezier(0.6,0,0.7,1);
+    }
+    .yes-heart:nth-child(1) { top: 0; left: 50%; margin-left: -0.6em; animation-delay: 0s; }
+    .yes-heart:nth-child(2) { top: 12%; right: 0; animation-delay: .3s; }
+    .yes-heart:nth-child(3) { bottom: 12%; right: 0; animation-delay: .6s; }
+    .yes-heart:nth-child(4) { bottom: 0; left: 50%; margin-left: -0.6em; animation-delay: .2s; }
+    .yes-heart:nth-child(5) { top: 12%; left: 0; animation-delay: .5s; }
+    @keyframes float-heart {
+      0%, 100% { transform: translateY(0) scale(1); }
+      50% { transform: translateY(-8px) scale(1.1); }
+    }
+    .yes-btn {
+      background: linear-gradient(135deg,var(--pink) 80%,#ffe7ea 100%);
+      color: var(--brown);
+      font-size: 1.44rem;
+      padding: 0.91em 1.71em;
+      margin-top: 2.25rem;
+      border: none;
+      border-radius: 2rem;
+      box-shadow: var(--shadow-sm), 0 1.5px 0 rgb(242,182,196,0.18);
+      font-weight: 600;
+      cursor: pointer;
+      position: relative;
+      transition: 
+        transform 170ms cubic-bezier(.78,-0.22,.55,.83),
+        box-shadow 220ms,
+        background 250ms;
+      outline: none;
+    }
+    .yes-btn:hover, .yes-btn:focus {
+      transform: scale(1.07) translateY(-2px) rotate(-1.5deg);
+      box-shadow: 0 8px 32px var(--pink), 0 2px 14px #fcd6e74c;
+      background: linear-gradient(135deg,var(--pink) 60%,#fff5f8 100%);
+    }
+    /* NO BUTTON & SAD CHARACTERS */
+    .no-chars {
+      display: flex;
+      gap: 0.32rem;
+      position: absolute;
+      top: -2.35rem;
+      left: 50%;
+      transform: translateX(-50%);
+      pointer-events: none;
+      width: 98px;
+      justify-content: center;
+      z-index: 2;
+    }
+    .no-char {
+      font-size: 1.34rem;
+      filter: grayscale(0.55) brightness(1.02) opacity(0.86);
+      transition: filter 0.21s;
+    }
+    .no-btn {
+      background: linear-gradient(135deg,var(--beige) 90%,#fffdf8 100%);
+      color: #a08854;
+      font-size: 1.36rem;
+      padding: 0.86em 1.59em;
+      margin-top: 2.25rem;
+      border: none;
+      border-radius: 2rem;
+      box-shadow: var(--shadow-sm), 0 2px 12px rgba(200,180,160,0.09);
+      font-weight: 500;
+      cursor: pointer;
+      transition:
+        transform 0.5s cubic-bezier(.3,.1,.2,1),
+        opacity 0.4s ease,
+        box-shadow 200ms,
+        background 250ms;
+      outline: none;
+      position: relative;
+      z-index: 3;
+    }
+    .no-btn:hover, .no-btn:focus {
+      background: linear-gradient(135deg,#f7eee4 0%,var(--beige) 100%);
+      color: #937046;
+      transform: scale(0.97) translateY(2px);
+      box-shadow: 0 5px 24px #ecb6b24a, 0 1px 10px #c3b2ba22;
+    }
+    .no-btn.hiding {
+      pointer-events: none;
+    }
+
+    /* MOBILE RESPONSIVE - same layout, scaled down */
+    @media (max-width: 510px) {
+      .valentine-container {
+        max-width: 94vw;
+        padding: 1.6rem 1.07rem 1.34rem 1.07rem;
+      }
+      .valentine-headline {
+        font-size: 1.6rem;
+        margin-bottom: 1.6rem;
+      }
+      .valentine-buttons {
+        flex-direction: row;
+        gap: 1.07rem;
+        margin-top: 0.43rem;
+      }
+      .button-wrapper { min-width: 0; }
+      .yes-btn, .no-btn {
+        font-size: 1.18rem;
+        padding: 0.7em 1.28em;
+        margin-top: 1.6rem;
+      }
+      .yes-hearts {
+        width: 107px;
+        height: 107px;
+      }
+      .yes-heart { font-size: 1.07rem; }
     }
   </style>
 </head>
 <body>
-  <div class="heart-scatter" id="heart-scatter"></div>
-  <div class="message-box">
-    <h1>YAYAYAYAYAYAYAY!!</h1>
-    <p class="love-text">I LOVE YOU SO VERY MUCH JUANNE <BR> AND ILL BE LOVING YOU FOREVER MWEHEHHEHEHEHEHE <img src="khert.png" alt="" class="heart-inline" aria-hidden="true"></p>
-    <p class="mwah-text">MWAH  MWAH MWAH <img src="khert.png" alt="" class="heart-inline" aria-hidden="true"></p>
-    <img src="khert.png" alt="" class="heart-img" aria-hidden="true">
+  <div class="valentine-container">
+    <div class="valentine-headline">
+      HAII BABYYY <3 <br>
+      Will you be my Valentine? (Forever)
+      <img src="smug.png" alt="Smug face" style="margin-top: 1.1rem; max-width: 110px; display: block; margin-left: auto; margin-right: auto;" aria-hidden="true">
+    </div>
+    <div class="valentine-buttons">
+      <!-- Yes Button with Hearts -->
+      <div class="button-wrapper">
+        <div class="yes-hearts">
+          <span class="yes-heart" aria-hidden="true">💖</span>
+          <span class="yes-heart" aria-hidden="true">💕</span>
+          <span class="yes-heart" aria-hidden="true">❤️‍🔥</span>
+          <span class="yes-heart" aria-hidden="true">💗</span>
+          <span class="yes-heart" aria-hidden="true">💝</span>
+        </div>
+        <button class="yes-btn">Yes</button>
+      </div>
+      <!-- No Button with Rilakkuma-style (Placeholder Bears) -->
+      <div class="button-wrapper no-btn-wrapper">
+        <button class="no-btn">No</button>
+      </div>
+    </div>
   </div>
-
   <script>
+    // Yes button: bouncy effect, then navigate after 3 second delay
+    document.querySelector('.yes-btn').addEventListener('click', function() {
+      this.style.transition = 'transform 0.15s';
+      this.style.transform = 'scale(1.12)';
+      setTimeout(() => {
+        this.style.transform = '';
+        this.style.transition = '';
+      }, 180);
+      setTimeout(() => {
+        window.location.href = 'yes-page.html';
+      }, 1000);
+    });
+
+    // NO BUTTON - runs away and disappears on click
     (function() {
-      const IMAGES = ['2heart.png', 'bearheart.png', 'brownheart.png', 'koheart.png', 'heart.png'];
-      const container = document.getElementById('heart-scatter');
-      const gap = 16;
-      const baseSize = 144;
-      const cellSize = baseSize + gap;
-      const maxOffset = 12;
-      const scaleMin = 0.92;
-      const scaleMax = 1.08;
-      const rotationRange = 18;
+      const btn = document.querySelector('.no-btn');
+      const wrapper = btn.closest('.button-wrapper');
+      let hasRunAway = false;
 
-      const vw = window.innerWidth;
-      const vh = window.innerHeight;
-      const cols = Math.ceil(vw / cellSize) + 1;
-      const rows = Math.ceil(vh / cellSize) + 1;
+      btn.addEventListener('click', function(e) {
+        e.preventDefault();
+        if (hasRunAway) return;
+        hasRunAway = true;
+        btn.classList.add('hiding');
 
-      const grid = [];
-      for (let row = 0; row < rows; row++) {
-        grid[row] = [];
-        let prevImageIndex = -1;
-        for (let col = 0; col < cols; col++) {
-          const excluded = [prevImageIndex];
-          if (row > 0) {
-            excluded.push(grid[row - 1][col]);
-            if (col > 0) excluded.push(grid[row - 1][col - 1]);
-            if (col < cols - 1) excluded.push(grid[row - 1][col + 1]);
-          }
-          const excludedSet = new Set(excluded.filter(i => i >= 0));
-          const valid = IMAGES.map((_, i) => i).filter(i => !excludedSet.has(i));
-          const imageIndex = valid.length > 0
-            ? valid[Math.floor(Math.random() * valid.length)]
-            : Math.floor(Math.random() * IMAGES.length);
-          prevImageIndex = imageIndex;
-          grid[row][col] = imageIndex;
+        // Pick a random direction to run off-screen
+        const directions = [
+          { x: 1, y: 0 },   // right
+          { x: -1, y: 0 },  // left
+          { x: 0.7, y: 0.7 },  // bottom-right
+          { x: -0.7, y: 0.7 }, // bottom-left
+        ];
+        const dir = directions[Math.floor(Math.random() * directions.length)];
+        const dist = Math.max(window.innerWidth, window.innerHeight) + 200;
 
-          const img = document.createElement('img');
-          img.src = IMAGES[imageIndex];
-          img.alt = '';
-          img.setAttribute('aria-hidden', 'true');
+        btn.style.transition = 'transform 0.55s cubic-bezier(.3,.1,.2,1), opacity 0.4s ease 0.2s';
+        btn.style.transform = 'translate(' + (dir.x * dist) + 'px, ' + (dir.y * dist) + 'px) scale(0.8)';
+        btn.style.opacity = '0';
 
-          const cellCenterX = col * cellSize + cellSize / 2;
-          const cellCenterY = row * cellSize + cellSize / 2;
-          const offsetX = (Math.random() - 0.5) * 2 * maxOffset;
-          const offsetY = (Math.random() - 0.5) * 2 * maxOffset;
-          const left = cellCenterX + offsetX;
-          const top = cellCenterY + offsetY;
-
-          const scale = scaleMin + Math.random() * (scaleMax - scaleMin);
-          const size = baseSize * scale;
-          const rotation = (Math.random() - 0.5) * 2 * rotationRange;
-          const opacity = 0.55 + Math.random() * 0.25;
-
-          img.style.left = left + 'px';
-          img.style.top = top + 'px';
-          img.style.width = size + 'px';
-          img.style.height = size + 'px';
-          img.style.setProperty('--rot', rotation + 'deg');
-          img.style.setProperty('--dur', (4.5 + Math.random() * 3) + 's');
-          img.style.setProperty('--delay', (Math.random() * -5) + 's');
-          img.style.opacity = opacity;
-
-          container.appendChild(img);
-        }
-      }
+        // Hide fully after animation
+        setTimeout(() => {
+          wrapper.style.visibility = 'hidden';
+          wrapper.style.pointerEvents = 'none';
+        }, 700);
+      });
     })();
 
-    // Force full reload when returning via back/forward cache
+    // Force full reload when coming back with back/forward cache
     window.addEventListener('pageshow', function (event) {
       if (event.persisted) {
         window.location.reload();
       }
     });
+
   </script>
 </body>
 </html>
